--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   </head>
   <body>
     <header class="header">
+      <div class="b-menu">
+        <input type="checkbox" id="burger-checkbox" class="burger-checkbox" />
+        <label for="burger-checkbox" class="burger"></label>
+        <ul class="menu-list">
+          <li><a href="#" class="menu-item">STORY</a></li>
+          <li><a href="#" class="menu-item">SHOP</a></li>
+          <li><a href="#" class="menu-item">CONTACT</a></li>
+          <li><a href="#" class="menu-item">WHOLESALE</a></li>
+        </ul>
+      </div>
       <button class="back" type="button">GO BACK</button>
       <nav>
         <ul>
@@ -30,23 +40,23 @@
     </header>
     <main class="main">
       <div class="container">
-        <h1>THE FIRST HOT SAUCE MADE FOR COFFEE</h1>
         <img
           class="image image_logo"
           src="./assets/img/text.png"
           alt="big logo"
         />
+        <h1>THE FIRST HOT SAUCE MADE FOR COFFEE</h1>
         <img
           class="image image_sauce1"
           src="./assets/img/sauce1.png"
           alt="sauce"
         />
+        <p class="text">put some fire in your belly</p>
         <img
           class="image image_sauce2"
           src="./assets/img/sauce2.png"
           alt="sauce"
         />
-        <p class="text">put some fire in your belly</p>
       </div>
       <div class="container2">
         <img
@@ -60,6 +70,43 @@
           src="./assets/img/scorpion1.png"
           alt="scorpion"
         />
+      </div>
+      <div class="list">
+        <!-- <div class="fire">
+          <img src="./assets/img/small_fire.png" alt="small_fire" />
+        </div> -->
+        <div class="card">
+          <!-- <img src="./assets/img/small_fire.png" alt="" class="fire" /> -->
+          <p class="subtitle">tangy and tingly</p>
+          <h3 class="cardname">LIGHT ROAST BLEND</h3>
+          <!-- <img class="background" src="./assets/img/green.png" alt="" /> -->
+          <img class="bottle" src="./assets/img/bottle1.png" alt="bottle" />
+        </div>
+        <!-- <img src="./assets/img/big_fire.png" alt="big_fire.png" /> -->
+        <div class="card">
+          <p class="subtitle">light & dark roast</p>
+          <h3 class="cardname">UJJO SAMPLER PACK</h3>
+          <img class="bottle" src="./assets/img/bottles.png" alt="bottle" />
+        </div>
+        <!-- <img src="./assets/img/big_fire.png" alt="big_fire.png" /> -->
+        <div class="card">
+          <p class="subtitle">tangy and tingly</p>
+          <h3 class="cardname">DARK ROAST BLEND</h3>
+          <img class="bottle" src="./assets/img/bottle2.png" alt="bottle" />
+        </div>
+        <!-- <img src="./assets/img/small_fire.png" alt="small_fire" /> -->
+      </div>
+      <div class="line">
+        <img src="./assets/img/pepper.png" alt="pepper" />
+        <p class="text1">put some fire in your belly</p>
+        <img src="./assets/img/pepper.png" alt="pepper" />
+        <p class="text1">put some fire in your belly</p>
+        <img src="./assets/img/pepper.png" alt="pepper" />
+        <p class="text1">put some fire in your belly</p>
+        <img src="./assets/img/pepper.png" alt="pepper" />
+      </div>
+      <div class="wrapper">
+        <img class="picture_big" src="./assets/img/sauce_big.png" alt="sauce" />
       </div>
     </main>
   </body>
